--- a/Module_3_sol/index.html
+++ b/Module_3_sol/index.html
@@ -21,7 +21,7 @@
 <body>
   <header>
     <nav id="header-nav" class="navbar-default">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <a href="index.html">
           <h1>Food, LLC</h1>  
